# LangAgentV3

./: .gitignore  README.md  index.html  main.py  package-lock.json  package.json  requirements.txt  tailwind.config.js  vite.config.js
app/: main.py
app/api/: chat.py  config_endpoints.py  deps.py  files.py  memory_endpoints.py  plugins.py  router.py  system.py  webhook.py
app/core/: config.py  constants.py  llm_engine.py  memory_engine.py  plugin_manager.py  rag_engine.py  security.py
app/services/: chat_service.py  config_service.py  rag_service.py
app/utils/: constants.py  fs_lock.py  logging.py
scripts/: build_engine.py  generate_icons.py
src/: App.jsx
src-tauri/: Cargo.toml  installer.nsh  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: main.rs
src/api/: request.js
src/assets/: tailwind.css
src/components/: ToastContainer.jsx
src/components/chat/: ChatHeader.jsx  ChatInput.jsx  MessageList.jsx
src/components/manage/: EditorPanel.jsx  SchemaRenderer.jsx  Sidebar.jsx
src/components/modals/: HealthModal.jsx  ModelConfigModal.jsx  MusicSettingsModal.jsx  ResetModal.jsx  WizardModal.jsx
src/stores/: useAppStore.js  useAudioStore.js  useChatStore.js  useConfigStore.js
src/views/: ChatView.jsx  ManageView.jsx
tests/: test_api.py  test_core.py
